--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TME Tax",
-  "name": "UAE Tax Virtual Assistant",
+  "short_name": "TME Tax Assistant",
+  "name": "TME Services Virtual Tax Assistant",
   "icons": [
     {
       "src": "favicon.ico",
