--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,12 @@
 [build]
-  command = "CI=false npm run build"
+  base = "."
+  command = "CI=false npm install && npm run build"
   publish = "build"
 
 [build.environment]
+  NODE_VERSION = "18"
+  NPM_VERSION = "9"
+  CI = "false"
   REACT_APP_API_URL = "https://tme-tax-backend-production.up.railway.app"
   REACT_APP_ENV = "test"
 
@@ -10,9 +14,21 @@
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
 
 [[headers]]
-  for = "/manifest.json"
-  [headers.values]
-    Content-Type = "application/json"
-    Access-Control-Allow-Origin = "*" 
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+
+[[headers]]
+  for = "/*.js"
+    [headers.values]
+    Content-Type = "text/javascript"
+
+[[headers]]
+  for = "/*.css"
+    [headers.values]
+    Content-Type = "text/css" 
