--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "."
-  command = "CI=false npm install && npm run build"
+  command = "CI=false npm ci && npm run build"
   publish = "build"
 
 [build.environment]
