--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "cra-template": "1.2.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
